# fool_proof_temp_files

./: CMakeLists.txt  LICENSE.md  README.md
include/fptf/: fptf.h  fptf.hh
src/: CMakeLists.txt
src/fptf/: CMakeLists.txt  fptf.cc  fptfd.cc
tests/: CMakeLists.txt  TestFptf.py  test_app.c  test_app.cc
